manifests/tg-bot/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: telegram-ip-whitelist
  namespace: tg-bot
spec:
  ipAllowList:
    sourceRange:
      - 149.154.160.0/20
      - 91.108.4.0/22
