manifests/tg-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tg-bot
  namespace: tg-bot
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tg-bot
